--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": ">=4.3.0",
+    "hbs": "^4.2.0",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
